# image_processing

./: .gitignore  CMakeLists.txt  Image.cpp  Image.h  ImageFactory.cpp  ImageFactory.h  ImagePGM.cpp  ImagePGM.h  ImagePPM.cpp  ImagePPM.h  ImageProcessing.cpp  ImageProcessing.h  Pixel.cpp  Pixel.h  main.cpp
sample_images/unit_testing/: box_blur.ppm  gaussian_blur3x3.ppm  gaussian_blur5x5.ppm  grayscale.pgm  non_zero_padding.ppm  ridge_detection1.pgm  ridge_detection1.ppm  ridge_detection2.pgm  zero_padding.ppm
test/: CMakeLists.txt  ImageFixture.cpp  runAllTests.cpp
